<resources>
    <string name="app_name">Service</string>
    <string name="error_network_error">当前网络不可用</string>
    <string name="error_not_login">未登录过环信</string>
    <string name="error_parse_error">解析错误</string>
    <string name="error_err_unknown">网络问题请稍后重试</string>
    <string name="err_image_android_min_version">上传图片只支持4.4版本以上</string>
    <string name="err_file_not_exist">文件不存在</string>
    <string name="add_self_error">不能添加自己</string>
    <string name="error_already_friend">此用户已是你的好友</string>
    <string name="error_already_friend_but_in_black">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="delete_sys_msg_error">删除失败或不存在该消息</string>
    <string name="error_group_no_members">没有群组成员</string>
    <string name="error_user_already_exist">注册用户名已存在，请重新输入</string>
    <string name="error_delete_conversation">会话不存在</string>
    <string name="service_agreement_url">http://www.easemob.com/protocol</string>
    <string name="privacy_agreement_url">http://www.easemob.com/agreement</string>
    <string name="please_check">请检查是否配置了环信AppKey</string>
    <string name="contact_listener_onContactAdded">您已经添加%1$s为好友</string>
    <string name="contact_listener_onContactDeleted">您已删除好友%1$s</string>
    <string name="contact_listener_onContactDeleted_by_other">%1$s已与您解除好友关系</string>
    <string name="contact_listener_onContactInvited">%1$s希望和您成为好友，请通过</string>
    <string name="contact_listener_onFriendRequestAccepted">您的好友申请已经通过</string>
    <string name="contact_listener_onFriendRequestDeclined">%1$s已拒绝您的好友申请</string>
    <string name="multi_device_contact_accept">接受%s的好友邀请[remote]</string>
    <string name="multi_device_contact_decline">拒绝%s的好友邀请[remote]</string>
    <string name="multi_device_contact_add">发送好友邀请给%s[remote]</string>
    <string name="multi_device_contact_ban">加%s到黑名单[remote]</string>
    <string name="multi_device_contact_allow">移除%s从黑名单[remote]</string>
    <string name="multi_device_group_create">创建群组[remote]</string>
    <string name="multi_device_group_destroy">销毁群组[remote]</string>
    <string name="multi_device_group_join">加入群组[remote]</string>
    <string name="multi_device_group_leave">离开群组[remote]</string>
    <string name="multi_device_group_apply">申请加入群组[remote]</string>
    <string name="multi_device_group_apply_accept">接受%s入群申请[remote]</string>
    <string name="multi_device_group_apply_decline">拒绝%s入群申请[remote]</string>
    <string name="multi_device_group_invite">邀请%s加入群组[remote]</string>
    <string name="multi_device_group_invite_accept">接受%s入群邀请[remote]</string>
    <string name="multi_device_group_invite_decline">拒绝%s入群邀请[remote]</string>
    <string name="multi_device_group_kick">将%s从群组移除[remote]</string>
    <string name="multi_device_group_ban">将%s加入群组的黑名单[remote]</string>
    <string name="multi_device_group_allow">将%s从群组的黑名单移除[remote]</string>
    <string name="multi_device_group_block">停止接受群组消息[remote]</string>
    <string name="multi_device_group_unblock">可以接受群组的消息[remote]</string>
    <string name="multi_device_group_assign_owner">将群组所有者权限转移给%1$s[remote]</string>
    <string name="multi_device_group_add_admin">添加%s作为群组的管理员[remote]</string>
    <string name="multi_device_group_remove_admin">移除%s在群组的管理员身份[remote]</string>
    <string name="multi_device_group_add_mute">将%s在群组中禁言[remote]</string>
    <string name="multi_device_group_remove_mute">将%s在群组中解除禁言[remote]</string>
    <string name="group_listener_onInvitationReceived">%1$s邀请您加入「%2$s」</string>
    <string name="group_listener_onRequestToJoinReceived">%1$s请求加入「%2$s」</string>
    <string name="group_listener_onRequestToJoinAccepted">%1$s已同意您加入「%2$s」</string>
    <string name="group_listener_onRequestToJoinDeclined">%1$s已拒绝您加入「%2$s」的申请</string>
    <string name="group_listener_onInvitationAccepted">您的加群邀请已经被%1$s接受</string>
    <string name="group_listener_onInvitationDeclined">%1$s已拒绝您的加群邀请</string>
    <string name="group_listener_onUserRemoved">您已被群管理员移出「%1$s」</string>
    <string name="group_listener_onGroupDestroyed">群「%1$s」已被解散</string>
    <string name="group_listener_onAutoAcceptInvitationFromGroup">您已加入「%1$s」</string>
    <string name="group_listener_onMuteListAdded">%1$s已被群主禁言</string>
    <string name="group_listener_onMuteListRemoved">%1$s已被群主恢复发言</string>
    <string name="group_listener_onWhiteListAdded">%1$s已被群主添加进白名单</string>
    <string name="group_listener_onWhiteListRemoved">%1$s已被群主移出白名单</string>
    <string name="group_listener_onAllMemberMuteStateChanged_mute">群主已开启全员禁言</string>
    <string name="group_listener_onAllMemberMuteStateChanged_not_mute">群主已关闭全员禁言</string>
    <string name="group_listener_onAdminAdded">%1$s已被群主指定为群管理员</string>
    <string name="group_listener_onAdminRemoved">%1$s已被群主取消群管理员权限</string>
    <string name="group_listener_onOwnerChanged">%1$s已将群主转移给%2$s</string>
    <string name="group_listener_onMemberJoined">%1$s已经加入群组</string>
    <string name="group_listener_onMemberExited">%1$s已退出群组</string>
    <string name="group_listener_onAnnouncementChanged">群公告内容已更新，请查看</string>
    <string name="group_listener_onSharedFileAdded">群文件%1$s已上传，请查看</string>
    <string name="group_listener_onSharedFileDeleted">群文件%1$s已被删除</string>
    <string name="Has_agreed_to_your_friend_request">已同意你的好友请求</string>
    <string name="Has_agreed_to_your_friend_refused">已拒绝你的好友请求</string>
    <string name="Request_to_add_you_as_a_friend">请求加你为好友</string>
    <string name="Apply_to_the_group_of">申请加入群：</string>
    <string name="invite_join_group">邀请加入群：</string>
    <string name="Has_agreed_to">已同意%1$s的请求</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="accept_join_group">%s同意加入群</string>
    <string name="refuse_join_group">%s拒绝加入群</string>
    <string name="system_agree_invite">您已同意%1$s的好友请求</string>
    <string name="system_agree_remote_user_apply_to_join_group">您已同意%1$s的入群申请</string>
    <string name="system_agree_received_remote_user_invitation">您已同意%1$s的入群邀请</string>
    <string name="system_decline_invite">您已拒绝%1$s的好友请求</string>
    <string name="system_decline_remote_user_apply_to_join_group">您已拒绝%1$s的入群申请</string>
    <string name="system_decline_received_remote_user_invitation">您已拒绝%1$s的入群邀请</string>
    <string name="system_other_decline_invite">%1$s拒绝了您的好友请求</string>
    <string name="system_other_decline_remote_user_apply_to_join_group">%1$s拒绝了您的入群申请</string>
    <string name="system_other_decline_received_remote_user_invitation">%1$s拒绝了您的入群邀请</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="msg_recall_by_user">%1$s 撤回了一条消息</string>
    <string name="msg_recall_by_another">%1$s 撤回了 %2$s 的一条消息</string>
    <string name="demo_contact_listener_onContactAdded">您已经添加%1$s为好友</string>
    <string name="demo_contact_listener_onContactDeleted">您已删除好友%1$s</string>
    <string name="demo_contact_listener_onContactDeleted_by_other">%1$s已与您解除好友关系</string>
    <string name="demo_contact_listener_onContactInvited">%1$s希望和您成为好友，请通过</string>
    <string name="demo_contact_listener_onFriendRequestAccepted">您的好友申请已经通过</string>
    <string name="demo_contact_listener_onFriendRequestDeclined">%1$s已拒绝您的好友申请</string>
    <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="title_activity_select_user_card">选择好友</string>
    <string name="title_activity_choose_head_image">选择头像</string>
    <string name="demo_contact_get_userInfo_failed">获取用户属性失败</string>
    <string name="unbind_device_token_failed">解绑设备token失败</string>
    <string name="ease_presence_online">在线</string>
    <string name="ease_presence_busy">繁忙</string>
    <string name="ease_presence_do_not_disturb">免打扰</string>
    <string name="ease_presence_leave">离开</string>
    <string name="ease_presence_offline">离线</string>
    <string name="ease_presence_custom">自定义</string>
    <string name="ease_presence_status">状态</string>
    <string name="ease_presence_done">完成</string>
    <string name="search_text_hint">搜索</string>
    <string name="em_add_contact_item_button_text">添加好友</string>
    <string name="em_add_contact_item_button_text_added">已添加</string>
    <string name="em_add_contact_not_add_myself">不能添加自己</string>
    <string name="em_add_contact_user_already_in_contactlist">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="em_add_contact_this_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="em_add_contact_add_a_friend">加个好友呗</string>
    <string name="em_add_contact_send_successful">已发送好友邀请</string>
    <string name="has_been_send">Sent</string>
    <string name="group_create_title">Create</string>
    <string name="group_done_title">Done</string>
    <string name="group_next">Next</string>
    <string name="group_application_send">The group application has been sent</string>
    <string name="contact_agreed_request">同意</string>
    <string name="contacts_search_friends">搜索好友</string>
    <string name="circle_save">保存</string>
    <string name="home_server_name">社区名称</string>
    <string name="home_server_name_hint">必填项</string>
    <string name="home_server_desc">社区简介</string>
    <string name="home_server_desc_hint">120字以内</string>
    <string name="home_create_server_success">创建社区成功</string>
    <string name="home_create_server_failure">创建社区失败</string>
    <string name="home_server_name_is_null">社区名字不能为空</string>
    <string name="home_change_conver">更换封面</string>
    <string name="home_server_conver">更换封面</string>
    <string name="home_server_tags">社区标签</string>
    <string name="home_update_server_success">更新社区成功</string>
    <string name="circle_cancel">取消</string>
    <string name="circle_confirm">确认</string>
    <string name="home_channel_name_hint">必填项</string>
    <string name="home_channel_desc_hint">120字以内</string>
    <string name="circle_private_channel">私密频道</string>
    <string name="circle_whether_public_channel">是否公开频道</string>
    <string name="circle_create">创建</string>
    <string name="create_channel_success">创建channel成功</string>
    <string name="home_channel_name_is_null">频道名称是必填项</string>
    <string name="circle_create_channel">创建频道</string>
    <string name="dialog_to_chat">发起私聊</string>
    <string name="dialog_kick_channel">踢出频道</string>
    <string name="dialog_kick_server">踢出社区</string>
    <string name="dialog_set_admin">设为管理员</string>
    <string name="dialog_cancel_admin">取消管理员</string>
    <string name="dialog_member_mute">成员禁言</string>
    <string name="dialog_member_unmute">成员解禁</string>
    <string name="hx_id">环信ID:</string>
    <string name="circle_mute_success">禁言成功</string>
    <string name="circle_mute_failure">禁言失败</string>
    <string name="circle_unmute_success">解禁言成功</string>
    <string name="circle_unmute_failure">解禁言失败</string>
    <string name="circle_addModerator_success">设为管理员成功</string>
    <string name="circle_addModetator_failure">设为管理员失败</string>
    <string name="circle_removeModerator_success">移除管理员成功</string>
    <string name="circle_removeModetator_failure">移除管理员失败</string>
    <string name="circle_removeUser_from_channel_failure">踢出频道失败</string>
    <string name="circle_removeUser_from_channel_success">踢出频道成功</string>
    <string name="circle_removeUser_from_server_success">踢出社区成功</string>
    <string name="circle_no_result">没有数据结果</string>
    <string name="circle_join_in_server_failue">加入社区失败</string>
    <string name="circle_join_in_server_success">加入社区成功</string>
    <string name="circle_join_in_channel_failue">加入频道失败</string>
    <string name="circle_join_in_channel_success">加入频道成功</string>
    <string name="update_channel_success">更新channel成功</string>
    <string name="circle_thread_name_is_null">子区名不能为空</string>
    <string name="circle_text_channel">文字频道</string>
    <string name="circle_voice_channel">语聊房频道</string>
    <string name="circle_channel_name">频道名称</string>
    <string name="input_channel_name">输入频道名称</string>
    <string name="circle_server_overview_title">社区概览</string>
</resources>