<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="io.agora.service.model.ChannelViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_141414"
        tools:context=".ui.channel.CreateChannelActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cls_titlebar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/circle_statusbar_height"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_arrow_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circle_create_channel"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                app:layout_constraintLeft_toRightOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="@id/iv_back" />

            <TextView
                android:id="@+id/tv_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:padding="4dp"
                android:text="@string/circle_create"
                android:textColor="@drawable/selector_green_gray979797_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_channel_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/circle_channel_type"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cls_titlebar" />

        <RadioGroup
            android:id="@+id/rg_channel_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_channel_type">

            <RadioButton
                android:id="@+id/rb_text_channel"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/shape_line_2e2e2e_bg"
                android:button="@null"
                android:drawableLeft="@drawable/circle_text_channel"
                android:drawableRight="@drawable/selector_check_uncheck"
                android:gravity="center_vertical"
                android:text="@string/circle_text_channel"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_voice_channel"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/shape_line_2e2e2e_bg"
                android:button="@null"
                android:drawableLeft="@drawable/circle_voice_channel"
                android:drawableRight="@drawable/selector_check_uncheck"
                android:gravity="center_vertical"
                android:text="@string/circle_voice_channel"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/circle_channel_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_channel_type" />

        <TextView
            android:id="@+id/tv_name_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="0/16"
            android:textColor="@color/color_gray_929497"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/edt_channel_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_line_2e2e2e_bg"
            android:hint="@string/input_channel_name"
            android:maxLength="16"
            android:minHeight="40dp"
            android:onClick="@{(v)->vm.delete(v)}"
            android:text="@={vm.channelName}"
            android:textColor="@color/white"
            android:textColorHint="@color/color_gray_a7a9ac"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_name"
            app:layout_constraintRight_toRightOf="@id/tv_name_count"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_delete"
            android:visibility="@{vm.channelName.length()&gt;0?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/edt_channel_name"
            app:layout_constraintRight_toRightOf="@id/tv_name_count"
            app:layout_constraintTop_toTopOf="@id/edt_channel_name" />

        <io.agora.service.widget.SwitchItemView
            android:id="@+id/swi_private"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_channel_name"
            app:switchItemShowDivider="false"
            app:switchItemTitle="@string/circle_whether_public_channel"
            app:switchItemTitleColor="@color/white" />

        <View
            android:id="@+id/view_line_private"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_line_2e2e2e_bg"
            app:layout_constraintTop_toBottomOf="@id/swi_private" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginRight="16dp"
            android:text="@string/circle_create_channel_private_switch_hint"
            android:textColor="@color/color_gray_747577"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line_private" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
